--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "add": "^2.0.6",
+    "flickity": "2.3.0",
+    "kaboom": "^2000.2.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-flickity-component": "^4.0.0",
+    "react-particles": "^2.8.0",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.6",
+    "tsparticles": "^2.8.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19"
