--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "add": "^2.0.6",
+    "axios": "^1.3.2",
     "flickity": "2.3.0",
     "kaboom": "^2000.2.10",
     "react": "^18.2.0",
